feat: changes to statistics
