# meme_backend/src/main/java/pl/jhonylemon/memewebsite/controller/PostStatisticController.java
@@ -8,6 +8,7 @@ import org.springframework.web.bind.annotation.RestController;
 import pl.jhonylemon.memewebsite.api.PostStatisticApi;
 import pl.jhonylemon.memewebsite.mapper.PostStatisticMapper;
 import pl.jhonylemon.memewebsite.model.PostStatisticGetModelApi;
+import pl.jhonylemon.memewebsite.model.StatisticPutModelApi;
 import pl.jhonylemon.memewebsite.service.poststatistic.PostStatisticService;
 
 @RestController
@@ -29,20 +30,20 @@ public class PostStatisticController implements PostStatisticApi {
 
     @Override
     @PreAuthorize("hasAuthority('USER_EDIT')")
-    public ResponseEntity<PostStatisticGetModelApi> setFavoriteStatistic(Long postId, Boolean favorite) {
+    public ResponseEntity<PostStatisticGetModelApi> setFavoriteStatistic(Long postId, StatisticPutModelApi favorite) {
         return ResponseEntity.ok().body(
                 postStatisticMapper.postStatisticsGetDtoToModelApi(
-                        postStatisticService.setFavoriteStatistic(postId,favorite)
+                        postStatisticService.setFavoriteStatistic(postId,favorite.getVote())
                 )
         );
     }
 
     @Override
     @PreAuthorize("hasAuthority('USER_EDIT')")
-    public ResponseEntity<PostStatisticGetModelApi> setVoteStatistic(Long postId, Boolean vote) {
+    public ResponseEntity<PostStatisticGetModelApi> setVoteStatistic(Long postId, StatisticPutModelApi vote) {
         return ResponseEntity.ok().body(
                 postStatisticMapper.postStatisticsGetDtoToModelApi(
-                        postStatisticService.setVoteStatistic(postId,vote)
+                        postStatisticService.setVoteStatistic(postId,vote.getVote())
                 )
         );
     }
